// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell component check Cell render empty 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ hcpULb"
    value="0"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell render fill 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ klZATh"
    value="1"
  />
</DocumentFragment>
`;